# message-summarizer

./: .gitignore  README.md  bot.py  chat_prompt.txt  commands.py  main.py  message-sum.py  nohup.out  prompt.txt  pyproject.toml  summarize_prompt.txt
resources/: bot_prompt.txt  prompts.py  summary_prompt.txt
src/: bot.py  commands.py
